--- a/Example/SwiftSpreadsheet/SpreadsheetBottomRightColumnView.xib
+++ b/Example/SwiftSpreadsheet/SpreadsheetBottomRightColumnView.xib
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="tvk-kq-RyS" customClass="SpreadsheetCollectionReusableView" customModule="swift_spreadsheet_Example" customModuleProvider="target">
+        <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="tvk-kq-RyS" customClass="SpreadsheetCollectionReusableView" customModule="SwiftSpreadsheet_Example" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -29,6 +29,12 @@
                         <constraint firstAttribute="width" constant="1" id="v3w-Te-DmJ"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mVg-wc-el5">
+                    <rect key="frame" x="139" y="15" width="42" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -38,7 +44,12 @@
                 <constraint firstAttribute="trailing" secondItem="ygv-wj-q7L" secondAttribute="trailing" id="QgA-ho-w7g"/>
                 <constraint firstItem="ygv-wj-q7L" firstAttribute="top" secondItem="tvk-kq-RyS" secondAttribute="top" id="jwX-nr-rrV"/>
                 <constraint firstAttribute="bottom" secondItem="1cH-IR-XEO" secondAttribute="bottom" id="r8b-RG-6Cy"/>
+                <constraint firstItem="mVg-wc-el5" firstAttribute="centerX" secondItem="tvk-kq-RyS" secondAttribute="centerX" id="u0l-QQ-ER3"/>
+                <constraint firstItem="mVg-wc-el5" firstAttribute="centerY" secondItem="tvk-kq-RyS" secondAttribute="centerY" id="wbS-bh-AeF"/>
             </constraints>
+            <connections>
+                <outlet property="infoLabel" destination="mVg-wc-el5" id="IHN-eE-zBB"/>
+            </connections>
             <point key="canvasLocation" x="537" y="534"/>
         </collectionReusableView>
     </objects>
